fixed margins on tablet styles

--- a/src/App.css
+++ b/src/App.css
@@ -38,14 +38,18 @@ body {
 
 /* ----- Mobile Styles ----- */
 
-.form_container {
+.container {
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: start;
   font-size: 1.8rem;
-  margin: 2.5rem 2.5rem 0 2.5rem;
+  /* margin: 2.5rem 2.5rem 0 2.5rem; */
   background-color: hsl(0, 0%, 100%);
+}
+
+.form_container {
+  margin: 2.5rem 2.5rem 0 2.5rem;
 }
 
 .intro_to_list {
